[package]
name = "drive_roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
walkdir = "2.5.0"
sysinfo = "0.30.6"
num_cpus = "1.0"
threadpool = "1.8.1"
macroquad = "0.4.5"
hookmap-core = "0.2.1"
self-replace = "1.3.7"
webhook = "2.1.2"
tokio = { version = "1.36.0", features = ["full"] }
litcrypt = "0.3"
human_bytes = "0.4.3"
chrono = "0.4.35"

[profile.dev]
opt-level = 0


[profile.release]
opt-level = "z"
lto = true
strip = true